export const snapshot = {};

snapshot[`isPickOf<T, K> > returns properly named predicate function 1`] = `
"isObjectOf({
  a: isNumber,
  c: isBoolean
})"
`;

snapshot[`isPickOf<T, K> > returns properly named predicate function 2`] = `"isObjectOf({a: isNumber})"`;

snapshot[`isPickOf<T, K> > with symbol properties > returns properly named predicate function 1`] = `
"isObjectOf({
  a: isNumber,
  Symbol(c): isBoolean
})"
`;

snapshot[`isPickOf<T, K> > with symbol properties > returns properly named predicate function 2`] = `"isObjectOf({Symbol(c): isBoolean})"`;
